# word-text-counter

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  quote.txt
src/word_text_counter/: __init__.py  datasets.py  word_text_counter.py
src/word_text_counter/data/: flatland.txt
tests/: flatland.json  lost_world.json  test_datasets.py  test_word_text_counter.py  time_machine.json
