[tool.poetry]
name = "word_text_counter"
version = "0.2.0"
description = "Calculate word counts in a text file!"
authors = ["Sumbono"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.16.0", python = "^3.9"}
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
python-semantic-release = "^7.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
version_source = "tag"
branch = "main" # branch to make releases of
changelog_file = "CHANGELOG.md" # changelog file
build_command = "poetry build" # build dists
dist_path = "dist/" # where to put dists
upload_to_release = true # auto-create GitHub release
upload_to_pypi = false # don't auto-upload to PyPI
remove_dist = false # don't remove dists
patch_without_tag = true # patch release by default